crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_i16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: i16) -> i16 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i16 @negate(i16 %0) {
body:
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %neg = sub i16 0, %a1
  ret i16 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
