crates/mun_codegen/src/snapshots/mun_codegen__test__private_fn_only.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    fn private_main() {\n        let a = 1;\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

define void @private_main() {
body:
  %a = alloca i32, align 4
  store i32 1, ptr %a, align 4
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"
