crates/mun_codegen/src/snapshots/mun_codegen__test__update_operators.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add(a:i32, b:i32) -> i32 {\n      let result = a\n      result += b\n      result\n    }\n\n    pub fn subtract(a:i32, b:i32) -> i32 {\n      let result = a\n      result -= b\n      result\n    }\n\n    pub fn multiply(a:i32, b:i32) -> i32 {\n      let result = a\n      result *= b\n      result\n    }\n\n    pub fn divide(a:i32, b:i32) -> i32 {\n      let result = a\n      result /= b\n      result\n    }\n\n    pub fn remainder(a:i32, b:i32) -> i32 {\n      let result = a\n      result %= b\n      result\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @add(i32 %0, i32 %1) {
body:
  %result = alloca i32, align 4
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  store i32 %a1, ptr %result, align 4
  %result2 = load i32, ptr %result, align 4
  %b3 = load i32, ptr %b, align 4
  %add = add i32 %result2, %b3
  store i32 %add, ptr %result, align 4
  %result4 = load i32, ptr %result, align 4
  ret i32 %result4
}

define i32 @subtract(i32 %0, i32 %1) {
body:
  %result = alloca i32, align 4
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  store i32 %a1, ptr %result, align 4
  %result2 = load i32, ptr %result, align 4
  %b3 = load i32, ptr %b, align 4
  %sub = sub i32 %result2, %b3
  store i32 %sub, ptr %result, align 4
  %result4 = load i32, ptr %result, align 4
  ret i32 %result4
}

define i32 @multiply(i32 %0, i32 %1) {
body:
  %result = alloca i32, align 4
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  store i32 %a1, ptr %result, align 4
  %result2 = load i32, ptr %result, align 4
  %b3 = load i32, ptr %b, align 4
  %mul = mul i32 %result2, %b3
  store i32 %mul, ptr %result, align 4
  %result4 = load i32, ptr %result, align 4
  ret i32 %result4
}

define i32 @divide(i32 %0, i32 %1) {
body:
  %result = alloca i32, align 4
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  store i32 %a1, ptr %result, align 4
  %result2 = load i32, ptr %result, align 4
  %b3 = load i32, ptr %b, align 4
  %div = sdiv i32 %result2, %b3
  store i32 %div, ptr %result, align 4
  %result4 = load i32, ptr %result, align 4
  ret i32 %result4
}

define i32 @remainder(i32 %0, i32 %1) {
body:
  %result = alloca i32, align 4
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  store i32 %a1, ptr %result, align 4
  %result2 = load i32, ptr %result, align 4
  %b3 = load i32, ptr %b, align 4
  %rem = srem i32 %result2, %b3
  store i32 %rem, ptr %result, align 4
  %result4 = load i32, ptr %result, align 4
  ret i32 %result4
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
